[package]
name = "adventofcode2021"
version = "0.1.0"
authors = ["Samour <aaron.burke.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
ndarray = "0.15.4"
